<resources>
    <string name="app_name">HappyHour</string>
    <string name="text_help">Bienvenid@s a Happy Hour
        En esta aplicacion se encuentran varios minijuegos con los que
        poder divertirte al maximo.
    </string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="camera_icon_for_camera_sound">Camera icon for camera sound</string>
    <string name="wallpaper_image_for_all_the_app">Wallpaper image for all the app</string>
    <string name="Game_number">Juego</string>
    <string name="initial_date">Dia y Hora</string>
    <string name="fi_date">Finalizado</string>
</resources>
